--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,7 +22,7 @@ jobs:
       run: npm install
 
     - name: Build Angular App
-      run: ng build --configuration=production
+      run: npm run build
 
     - name: Deploy to GitHub Pages
       run: |
