--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,6 +26,6 @@ jobs:
 
     - name: Deploy to GitHub Pages
       run: |
-        npx angular-cli-ghpages --dir=dist/your-angular-app --base-href=/angular-app/
+        npx angular-cli-ghpages --dir=dist/your-angular-app
       env:
         CI: true
