--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,11 +24,23 @@ jobs:
     - name: Build Angular App
       run: npm run build
 
-    - name: Deploy to GitHub Pages
-      run: |
-        npx angular-cli-ghpages --dir=dist/your-angular-app --repo ${{ secrets.GH_TOKEN }}
-      env:
-        CI: true
+     
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Download build
+        uses: actions/download-artifact@v1
+        with:
+          name: dist
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@releases/v3
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: dist/your-angular-app
         
         
         
