--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,6 +23,13 @@ jobs:
 
     - name: Build Angular App
       run: npm run build
+      
+    - name: Archive build
+        if: success()
+        uses: actions/upload-artifact@v1
+        with:
+          name: deploy_dist
+          path: dist
 
      
   deploy:
@@ -34,7 +41,7 @@ jobs:
       - name: Download build
         uses: actions/download-artifact@v1
         with:
-          name: dist
+          name: deploy_dist
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
