--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,7 +27,7 @@ jobs:
     - name: Deploy to GitHub Pages
       run: |
         ls -l dist/your-angular-app
-        npx angular-cli-ghpages --dir=dist/your-angular-app --repo ${{ secrets.GH_TOKEN }}
+        npx angular-cli-ghpages --dir=dist/your-angular-app --repo ${{ secrets.GH_TOKEN }} --no-silent
       env:
         CI: true
 
