--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,12 +13,6 @@ jobs:
     
 
     steps:
-    
-    - name: Set up Git
-      run: |
-        git config --global user.email "alexanderkalarickal@gmail.com"
-        git config --global user.name "alexander-kuruvilla"
-            
             
     - name: Checkout Repository
       uses: actions/checkout@v2
@@ -40,6 +34,7 @@ jobs:
         npx angular-cli-ghpages --dir=dist/your-angular-app --no-silent
       env:
         CI: true
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
         
         
