--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,6 +13,14 @@ jobs:
     
 
     steps:
+    
+    - name: Set up Git
+      uses: actions/setup-git@v2
+      with:
+        # Configure the global Git user identity
+        config-username: alexander-kuruvilla
+        config-email: alexanderkalarickal@gmail.com
+            
             
     - name: Checkout Repository
       uses: actions/checkout@v2
