--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,11 +15,9 @@ jobs:
     steps:
     
     - name: Set up Git
-      uses: actions/setup-git@v2
-      with:
-        # Configure the global Git user identity
-        config-username: alexander-kuruvilla
-        config-email: alexanderkalarickal@gmail.com
+      run: |
+        git config --global user.email "alexanderkalarickal@gmail.com"
+        git config --global user.name "${{ github.actor }}"
             
             
     - name: Checkout Repository
