--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,7 +29,7 @@ jobs:
         node-version: 16
 
     - name: Install Dependencies
-      run: npm install
+      run: npm install --force
 
     - name: Build Angular App
       run: npm run build
